--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -244,76 +244,56 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<cagov-county-search></cagov-county-search>
+<div class="row d-flex justify-content-md-center">
+  <form class="form-inline" id="county-form">
+    <div class="form-group mx-sm-3 mb-2 pos-rel autocomplete-inline">
+      <label for="county" class="sr-only">County</label>
+      <div class="awesomplete">
+        <input aria-expanded="false" aria-owns="awesomplete_list_1" autocomplete="off" class="form-control form-control-lg" data-list="" data-multiple="" id="location-query" role="combobox" type="text" placeholder="Enter a county">
+        <button class="clear d-none" id="clearCounty"><span class="ca-gov-icon-close-line" aria-hidden="true"></span>
+          <span class="underline">Clear</span></button>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-lightbg btn-bigger mb-2">Get county data</button>
+  </form>
+</div>
+<div class="row d-flex justify-content-md-center">
+  <span id="county-query-error" class="error-text d-none">County not found</span>
+</div>
+
+<script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+
+
 
 <h3 class="text-center mt-4 mb-0">Daily cases and deaths</h3>
 
-<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
+
+
+<div class="d-flex flex-column flex-md-row justify-content-center my-3">
+  <div class="js-toggle-county-container d-none">
+    <div class="large-tabs">
+      <button class="large-tab js-toggle-county county d-none">Alameda</button>
+      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
+    </div>
+  </div>
+</div>
+
+
 
 <p>California has {{_varStatTotalCases_}} confirmed cases of COVID-19, resulting in {{_varStatTotalDeaths_}} deaths.</p>
 
 
 
-  <!-- TOP CHARTS --> 
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-filter-buttons class="js-re-smalls js-filter-cases">
-        <div class="d-flex justify-content-center">
-          <button class="small-tab active" data-key="episode">Episode date</button>
-          <button class="small-tab" data-key="reported">Reported data</button>
-        </div>
-      </cagov-chart-filter-buttons>
-      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart" data-chart-config-filter="episode" data-chart-config-key="cases">
-        <ul class="d-none">
-          <li data-label="chartTitle">Confirmed cases in</li>
-          <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} increase)</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} decrease)</li>
-          <li data-label="chartLegend3"><span class="med-num">{cases_per_100k_7_days}</span> cases per 100K (7-day average)</li>
-          <li data-label="tooltipContent">
-                  Episode Date: <b>{DATE}</b><br>
-                  7-day average case rate per 100K: <b>{7DAY_AVERAGE}</b><br>
-                  Cases: <b>{CASES}</b>
-          </li>
-          <li data-label="dayAverage">7-day average</li>
-          <li data-label="cases_leftYAxisLegend">Cases per 100K</li>
-          <li data-label="cases_rightYAxisLegend">Cases</li>
-          <li data-label="cases_episode_xAxisLegend">Episode date</li>
-          <li data-label="cases_reported_xAxisLegend">Reported date</li>
-          <li data-label="pending">Pending</li>
-        </ul>
-      </cagov-chart-dashboard-confirmed-cases-episode-date>                
+<div class="row d-flex justify-content-md-center">
+  <div class="toggle-group-container cases-group">
+    <div id="cases-county-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="casesChartCounty"></div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-filter-buttons class="js-re-smalls js-filter-deaths">
-        <div class="d-flex justify-content-center">
-          <button class="small-tab active" data-key="death">Death date</button>
-          <button class="small-tab" data-key="reported">Reported data</button>
-        </div>
-      </cagov-chart-filter-buttons>
-      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart" data-chart-config-filter="death" data-chart-config-key="deaths">
-        <ul class="d-none">
-          <li data-label="chartTitle">Confirmed deaths in</li>
-          <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} increase)</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} decrease)</li>
-          <li data-label="chartLegend3"><span class="med-num">{deaths_per_100k_7_days}</span> deaths per 100K (7-day average)</li>
-          <li data-label="tooltipContent">
-            Death Date: <b>{DATE}</b><br>
-            7-day average death rate per 100K: <b>{7DAY_AVERAGE}</b><br>
-            Deaths: <b>{DEATHS}</b>
-          </li>
-          <li data-label="dayAverage">7-day average</li>
-          <li data-label="deaths_leftYAxisLegend">Deaths per 100K</li>
-          <li data-label="deaths_rightYAxisLegend">Deaths</li>
-          <li data-label="deaths_death_xAxisLegend">Death date</li>
-          <li data-label="deaths_reported_xAxisLegend">Reported date</li>
-          <li data-label="pending">Pending</li>
-        </ul>
-      </cagov-chart-dashboard-confirmed-deaths-death-date>               
-    </div> 
+    <div id="cases-state-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="casesChartState"></div>
+    </div>
   </div>
-
+</div>
 
 
 
@@ -327,7 +307,14 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
+<div class="d-flex flex-column flex-md-row justify-content-center my-3">
+  <div class="js-toggle-county-container d-none">
+    <div class="large-tabs">
+      <button class="large-tab js-toggle-county county d-none">Alameda</button>
+      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
+    </div>
+  </div>
+</div>
 
 
 
@@ -335,52 +322,16 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-  <!-- MIDDLE CHARTS -->
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-filter-buttons class="js-re-smalls js-filter-tests">
-        <div class="d-flex justify-content-center">
-          <button class="small-tab active" data-key="testing">Testing date</button>
-          <button class="small-tab" data-key="reported">Reported data</button>
-        </div>
-      </cagov-chart-filter-buttons>
-      <cagov-chart-dashboard-total-tests-testing-date class="chart"  data-chart-config-filter="testing" data-chart-config-key="tests">
-        <ul class="d-none">
-          <li data-label="chartTitle">Total tests in</li>
-          <li data-label="chartLegend1"><span class="big-num">{total_tests_performed}</span> total tests performed</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} increase)</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} decrease)</li>
-          <li data-label="tooltipContent">
-            Testing Date: <b>{DATE} </b><br>
-            7-day average test rate per 100K: <b>{7DAY_AVERAGE} </b><br>
-            Total Tests: <b>{TOTAL_TESTS} </b>
-          </li>
-          <li data-label="dayAverage">7-day average</li>
-          <li data-label="tests_leftYAxisLegend">Tests per 100K</li>
-          <li data-label="tests_rightYAxisLegend">Tests</li>
-          <li data-label="tests_testing_xAxisLegend">Testing date</li>
-          <li data-label="tests_reported_xAxisLegend">Reported date</li>
-          <li data-label="pending">Pending</li>
-        </ul>
-      </cagov-chart-dashboard-total-tests-testing-date>                
+<div class="row d-flex justify-content-md-center">
+  <div class="toggle-group-container cases-group">
+    <div id="testing-county-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="testingChartCounty"></div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-positivity-rate class="chart">
-        <ul class="d-none">
-          <li data-label="chartTitle">Positivity rate in</li>
-          <li data-label="chartLegend1"><span class="big-num">{test_positivity_7_days}</span> test positivity (7-day rate)</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> increase from 7-days prior</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> decrease from 7-days prior</li>
-          <li data-label="tooltipContent">
-            Testing Date: <b>{DATE} </b><br>
-            7-day positivity rate: <b>{7DAY_POSRATE} </b><br>
-            Total Tests: <b>{TOTAL_TESTS} </b>
-          </li>
-          <li data-label="pending">Pending</li>
-        </ul>
-      </cagov-chart-dashboard-positivity-rate>               
-    </div> 
-  </div> 
+    <div id="testing-state-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="testingChartState"></div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -394,42 +345,33 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
+<div class="d-flex flex-column flex-md-row justify-content-center my-3">
+  <div class="js-toggle-county-container d-none">
+    <div class="large-tabs">
+      <button class="large-tab js-toggle-county county d-none">Alameda</button>
+      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
+    </div>
+  </div>
+</div>
+
 
 
 <p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatHospitalTotal_}}, {{_varStatHospitalChangeText_}} {{_varStatHospitalChange_ | abs}} from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatIcuTotal_}}, {{_varStatIcuChangeText_}} {{_varStatIcuChange_ | abs}} from the prior day total.</p>
 
 
 
-  <!-- bottom HOSPITAL charts -->
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-hospitalized-patients class="chart">
-        <ul class="d-none">
-          <li data-label="chartTitle">COVID-19 hospitalized patients in</li>
-          <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> COVID-19 hospitalized patients</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more patients from prior day total ({CHANGE_FACTOR} increase)</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer patients from prior day total ({CHANGE_FACTOR} decrease)</li>
-          <li data-label="tooltipContent">
-            Reported Date: <b>{DATE} </b><br>
-            Total hospitalized patients: <b>{TOTAL_HOSPITALIZED} </b><br>
-            14-day average of hospitalized patients: <b>{14DAY_AVERAGE} </b>
-          </li>
-        </ul>
-      </cagov-chart-dashboard-hospitalized-patients>                
+<div class="row d-flex justify-content-md-center">
+  <div class="toggle-group-container hospitals-group">
+    <div id="hospital-county-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="hospitalChartCounty"></div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-icu-beds class="chart">
-        <ul class="d-none">
-          <li data-label="chartTitle">ICU beds in</li>
-          <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> ICU beds available</li>
-          <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more ICU beds from prior day total ({CHANGE_FACTOR} increase)</li>
-          <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer ICU beds from prior day total ({CHANGE_FACTOR} decrease)</li>
-          <li data-label="tooltipContent">On <b>{DATE}</b> there was a total of <b>{VALUE}</b> available ICU beds.</li>
-        </ul>
-      </cagov-chart-dashboard-icu-beds>               
-    </div> 
+    <div id="hospital-state-graph" class="toggle-group-element">
+      <div class="tableauPlaceholder" id="hospitalChartState"></div>
+    </div>
   </div>
+
+</div>
+
 
 
 <div class="bg-darkblue py-5 full-bleed mb-5">
