--- a/pages/translated-posts/homepage-featured-es.html
+++ b/pages/translated-posts/homepage-featured-es.html
@@ -1,12 +1,12 @@
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Vacúnese</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="Californiana está siendo vacunada"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Vacúnese</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">Consulte qué abre en su condado.</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="Letrero que dice &quot;Estamos abiertos&quot; en ventana de negocio"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">Consulte qué está abierto en su condado.</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Encuentre el nivel de su condado</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="Mapa del condado de California con niveles de colores"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Encuentre el nivel de su condado</a></p>
 					</article>
 				</div>
 			</div>
