--- a/pages/translated-posts/homepage-featured-tl.html
+++ b/pages/translated-posts/homepage-featured-tl.html
@@ -1,12 +1,12 @@
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Magpabakuna</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="Pagpapabakuna ng Californian"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Magpabakuna</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">Tingnan kung ano ang nakabukas sa iyong county</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="Bukas kami sa pag-sign in sa business window"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">Tingnan kung ano ang nakabukas sa iyong county</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Hanapin ang tier ng iyong county</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="Mapa ng county ng California na may mga nakakulay na tier"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Hanapin ang tier ng iyong county</a></p>
 					</article>
 				</div>
 			</div>
