--- a/pages/translated-posts/homepage-featured-vi.html
+++ b/pages/translated-posts/homepage-featured-vi.html
@@ -1,12 +1,12 @@
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Tiêm vắc-xin</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="Người dân California đang được tiêm vắc-xin"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Tiêm vắc-xin</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">Xem nơi nào được mở cửa tại quận của quý vị</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="Chúng tôi đang mở cửa sổ cho doanh nghiệp đăng ký"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">Xem nơi nào được mở cửa tại quận của quý vị</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Tìm cấp quận của quý vị</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="Bản đồ quận California với các cấp màu"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Tìm cấp quận của quý vị</a></p>
 					</article>
 				</div>
 			</div>
