--- a/pages/translated-posts/homepage-featured-zh-hant.html
+++ b/pages/translated-posts/homepage-featured-zh-hant.html
@@ -1,12 +1,12 @@
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">接種疫苗</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="正在接種疫苗的加州民眾"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">接種疫苗</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">查看您所在縣開放的行業</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="我們正在開放處理註冊業務的窗口"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">查看您所在縣開放的行業</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">查看您所在縣的等級</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="用不同顏色呈現各等級的加州郡縣地圖"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">查看您所在縣的等級</a></p>
 					</article>
 				</div>
 			</div>
