--- a/pages/wordpress-posts/v3-state-dashboard.html
+++ b/pages/wordpress-posts/v3-state-dashboard.html
@@ -257,52 +257,15 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 <p>California has {{_varStatTotalCases_}} confirmed cases of COVID-19, resulting in {{_varStatTotalDeaths_}} deaths.</p>
 
-<style type="text/css">
-.js-filter-cases, .js-filter-deaths {
-  position: absolute;
-  top: 57px;
-  display: block;
-  z-index: 5;
-  width: 94%;
-}
-.js-filter-cases .small-tab, .js-filter-deaths .small-tab {
-  width: 50%;
-}
-cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-chart-dashboard-confirmed-deaths-death-date.chart .chart-title {
-  margin-bottom: 50px;
-}
-.pos-rel {
-  position: relative;
-}
-</style>
-
-<style type="text/css">
-.js-filter-cases, .js-filter-deaths {
-  position: absolute;
-  top: 57px;
-  display: block;
-  z-index: 5;
-  width: 94%;
-}
-.js-filter-cases .small-tab, .js-filter-deaths .small-tab {
-  width: 50%;
-}
-cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-chart-dashboard-confirmed-deaths-death-date.chart .chart-title {
-  margin-bottom: 50px;
-}
-.pos-rel {
-  position: relative;
-}
-</style>
 <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12 pos-rel">
-      <cagov-chart-filter-buttons class="js-re-smalls js-filter-cases">
+    <div class="col-lg-6 col-md-6 col-sm-12 p-rel">
+      <cagov-chart-filter-buttons class="filter-buttons--statedash js-re-smalls js-filter-cases">
         <div class="d-flex justify-content-center">
           <button class="small-tab active" data-key="episode">Episode date</button>
           <button class="small-tab" data-key="reported">Reported data</button>
         </div>
       </cagov-chart-filter-buttons>
-      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart" data-chart-config-filter="episode" data-chart-config-key="cases">
+      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart filter-button-space" data-chart-config-filter="episode" data-chart-config-key="cases">
         <ul class="d-none">
           <li data-label="chartTitle">Confirmed cases in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
@@ -323,14 +286,14 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
         </ul>
       </cagov-chart-dashboard-confirmed-cases-episode-date>                
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12 pos-rel">
-      <cagov-chart-filter-buttons class="js-re-smalls js-filter-deaths">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-filter-buttons class="filter-buttons--statedash js-re-smalls js-filter-deaths">
         <div class="d-flex justify-content-center">
           <button class="small-tab active" data-key="death">Death date</button>
           <button class="small-tab" data-key="reported">Reported data</button>
         </div>
       </cagov-chart-filter-buttons>
-      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart" data-chart-config-filter="death" data-chart-config-key="deaths">
+      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart filter-button-space" data-chart-config-filter="death" data-chart-config-key="deaths">
         <ul class="d-none">
           <li data-label="chartTitle">Confirmed deaths in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
@@ -375,13 +338,13 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
 
 <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <!--<cagov-chart-filter-buttons class="js-re-smalls js-filter-tests">
+      <cagov-chart-filter-buttons class="filter-buttons--statedash js-re-smalls js-filter-tests">
         <div class="d-flex justify-content-center">
           <button class="small-tab active" data-key="testing">Testing date</button>
           <button class="small-tab" data-key="reported">Reported data</button>
         </div>
-      </cagov-chart-filter-buttons>-->
-      <cagov-chart-dashboard-total-tests-testing-date class="chart" data-chart-config-filter="testing" data-chart-config-key="tests">
+      </cagov-chart-filter-buttons>
+      <cagov-chart-dashboard-total-tests-testing-date class="chart filter-button-space" data-chart-config-filter="testing" data-chart-config-key="tests">
         <ul class="d-none">
           <li data-label="chartTitle">Total tests in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_tests_performed}</span> total tests performed</li>
@@ -402,7 +365,7 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
       </cagov-chart-dashboard-total-tests-testing-date>               
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-positivity-rate class="chart" data-chart-config-filter="positivity" data-chart-config-key="positivity">
+      <cagov-chart-dashboard-positivity-rate class="chart filter-button-space" data-chart-config-filter="positivity" data-chart-config-key="positivity">
         <ul class="d-none">
           <li data-label="chartTitle">Positivity rate in</li>
           <li data-label="chartLegend1"><span class="big-num">{test_positivity_7_days}</span> test positivity (7-day rate)</li>
@@ -441,7 +404,13 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
 
 <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-hospitalized-patients class="chart">
+      <cagov-chart-filter-buttons class="filter-buttons--statedash js-re-smalls js-filter-patients">
+        <div class="d-flex justify-content-center">
+          <button class="small-tab active" data-key="hospitalized">Hospitalized</button>
+          <button class="small-tab" data-key="icu">ICU</button>
+        </div>
+      </cagov-chart-filter-buttons>
+      <cagov-chart-dashboard-hospitalized-patients class="chart filter-button-space" data-chart-config-filter="hospitalized" data-chart-config-key="patients">
         <ul class="d-none">
           <li data-label="chartTitle">COVID-19 hospitalized patients in</li>
           <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> COVID-19 hospitalized patients</li>
@@ -456,7 +425,7 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
       </cagov-chart-dashboard-hospitalized-patients>                
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-icu-beds class="chart">
+      <cagov-chart-dashboard-hospitalized-patients class="chart filter-button-space" data-chart-config-filter="icu" data-chart-config-key="patients">
         <ul class="d-none">
           <li data-label="chartTitle">ICU beds in</li>
           <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> ICU beds available</li>
@@ -464,7 +433,7 @@ cagov-chart-dashboard-confirmed-cases-episode-date.chart .chart-title, cagov-cha
           <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer ICU beds from prior day total (<span class="med-num">{CHANGE_FACTOR}</span> decrease)</li>
           <li data-label="tooltipContent">On <b>{DATE}</b> there was a total of <b>{VALUE}</b> available ICU beds.</li>
         </ul>
-      </cagov-chart-dashboard-icu-beds>               
+      </cagov-chart-dashboard-hospitalized-patients>               
     </div> 
   </div>
 
